<resources>
    <string name="app_name">بلاغاتي</string>
    <string name="tag_line">من أجل سلامتكم استخدموا تطبيق بلاغاتي وابلغوا عن جميع الأضرار</string>
    <string name="welcome">اهلا بك في تطبيق بلاغاتي</string>
    <!--sign in/up-->
    <string name="login">تسجيل الدخول</string>
    <string name="register">انشاء الحساب</string>
    <string name="forget_pass">هل نسيت كلمة المرور؟</string>
    <string name="createAcc">إنشاء حساب</string>
    <string name="Remember_me"> تذكرني</string>


    <!--    dash-->
    <string name="hello_user">اهلا بك</string>
    <string name="user">لؤي</string>
    <string name="search_elem">ابحث عن ما تريد</string>
    <string name="newReport">إبلاغ جديد</string>
    <string name="listReport">سجل البلاغات </string>
    <string name="saftyList">إرشادات السلامة  </string>

    <!--    neWreport-->

    <string name="titleReport">تفاصيل البلاغ </string>
    <string name="submitReport">إرسال البلاغ </string>
    <string name="delete">حذف البلاغ </string>
    <string name="loc">مكان البلاغ </string>


    <string-array name="spinner_city_item">
        <item>-المحافظة-</item>
        <item>اربد</item>
        <item>جرش</item>
        <item>عجلون</item>
        <item>المفرق</item>
        <item>عمان</item>
        <item>الزرقاء</item>
        <item>البلقاء</item>
        <item>مادبا</item>
        <item>معان</item>
        <item>الكرك</item>
        <item>الطفيلة</item>
        <item>العقبة</item>
    </string-array>

    <string-array name="spinner_type_item">
        <item>-القسم-</item>
        <item>المديرية العامة للدفاع المدني</item>
        <item> المديرية العامة لقوات الدرك</item>
        <item>وزارة الداخلية</item>
        <item>شركات الاتصالات الخاصة</item>
        <item>هيئة تنظيم قطاع الاتصالات</item>
        <item>شركة الكهرباء الاردنية</item>
        <item>شركة مياه الاردن مياهنا</item>
        <item> امانة عمان الكبرى</item>
        <item>وزارة البلديات</item>
        <item>وزارة الاشغال</item>
    </string-array>
    <string name="title_activity_select_location">Map</string>
    <string name="title_activity_report_location">Map</string>


    <string name="description">
        ارسال كافة البلاغات التي ترد على رقم
الطوارئ الموحد (٩١١ (وتوثیقها وتحویلها آلیاً إلى
الجهات المستجیبة مثل: (الدفاع المدني، السیر،
مدیریات الشرطة، إدارت الأمن العام ومتابعة كافة
الاجراءات المتخذة علیها من قبل مختلف الوحدات
المعنیة بالإجراء من خلال انظمة معلوماتیة وعملیاتیة
متطورة تبین الاجراءات المتخذة على البلاغات وزمن
الوصول لمكان الحدث من قبل المعنیین بالاستجابة
وعلى مستوى المملكة وكذلك التنسیق مع الجهات
المدنیة مثل: أمانة عمان الكبرى, البلدیات, شركات
الكهرباء والمیاه في البلاغات التي تتطلب اجراء منهم.
    </string>

    <string name="user2">
      كل من یقیم على اراضي
المملكة الأردنیة
الهاشمیة (مواطن، زائر،
مقیم ....).
    </string>

    <string name="com">
  وحدات الأمن العام.
 مدیریة الدفاع المدني.
 قوات الدرك.
 شركات الاتصالات (زین، أورانج،
أمنیة).
 أمانة عمان الكبرى والبلدیات
الأخرى.
 شركات الخدمات (الكھرباء، المیاه).
 وزارة الداخلیة.
 المركز الوطني للأمن وإدارة
الأزمات
 القوات المسلحة الأردنیة.
    </string>

</resources>