<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Sign_in">

    <ImageView
        android:id="@+id/imageHeader"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:src="@drawable/header1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
    </ImageView>

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/header_layer"
        app:layout_constraintBottom_toBottomOf="@id/imageHeader">
    </View>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="18dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@id/imageHeader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.727">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:includeFontPadding="false"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"></TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/tag_line"
            android:textColor="@color/white"
            android:textSize="15sp"></TextView>
    </LinearLayout>

    <View
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:layout_marginBottom="30dp"
        android:id="@+id/viewSupporter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/imageHeader">
    </View>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/sign_in_back"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewSupporter">

        <TextView
            android:id="@+id/textWelcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="مرحبا بك"
            android:gravity="right"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/colorFor"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25sp"
            app:layout_constraintTop_toTopOf="parent">
        </TextView>


        <EditText
            android:id="@+id/inputIdNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@null"
            android:hint="الرقم الوطني"
            android:text="1234568789"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:paddingStart="60dp"
            android:paddingLeft="60dp"
            android:paddingEnd="10dp"
            android:paddingRight="10dp"
            android:textColorHint="@color/colorFor"
            android:textSize="15sp"
            android:gravity="right"

            app:layout_constraintTop_toBottomOf="@id/textWelcome"
            tools:ignore="Autofill"
            tools:layout_editor_absoluteX="40dp"></EditText>

        <View
            android:id="@+id/viewDivider1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorThre"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintTop_toBottomOf="@id/inputIdNum"
            android:layout_marginRight="10dp"></View>



        <EditText
            android:id="@+id/inputPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@null"
           android:hint="كلمة السر"
            android:text="0"
            android:textColorHint="@color/colorFor"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:paddingStart="60dp"
            android:paddingEnd="10dp"
            android:textSize="15sp"
            android:paddingLeft="60dp"
            android:paddingRight="10dp"
            android:gravity="right"
            app:layout_constraintTop_toBottomOf="@id/viewDivider1"
            >
        </EditText>

        <View
            android:id="@+id/viewDivider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorThre"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintTop_toBottomOf="@id/inputPass"
            ></View>


        <CheckBox
            android:id="@+id/login_chekRemember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/colorRed"
            android:padding="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/buttonLogin"
            app:layout_constraintEnd_toEndOf="@+id/viewDivider2"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/viewDivider2"
            app:layout_constraintTop_toBottomOf="@id/viewDivider2"
            app:layout_constraintVertical_bias="0.0"></CheckBox>

        <TextView
            android:id="@+id/TextRemember_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Remember_me"
            android:textSize="20sp"
            android:textColor="@color/colorRed"
            app:layout_constraintBottom_toBottomOf="@+id/login_chekRemember"
            app:layout_constraintEnd_toStartOf="@+id/login_chekRemember"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/viewDivider2"
            app:layout_constraintTop_toBottomOf="@+id/inputPass"
            app:layout_constraintVertical_bias="0.656"></TextView>

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="68dp"
            android:backgroundTint="@color/colorRed"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textSize="13sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/viewDivider2"
            tools:layout_editor_absoluteX="30dp">

        </Button>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="10dp"
            android:textSize="13sp"
            android:textColor="@color/colorSec"
            app:layout_constraintTop_toBottomOf="@id/buttonLogin"
            android:text="@string/forget_pass">

        </TextView>


        <Button
            android:id="@+id/buttonCreateAcc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/colorFor"
            android:text="@string/createAcc"
            android:textAllCaps="false"
            android:textSize="13sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/buttonLogin"
            app:layout_constraintBottom_toBottomOf="parent">

        </Button>




    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>