<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyReports">


    <TextView
        android:id="@+id/myComplaint_text"
        android:layout_centerInParent="true"
        android:textSize="30dp"
        android:textColor="#000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dashHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/header_dash"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/text_hello_dash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginTop="16dp"
            android:gravity="right"
            android:text="@string/listReport"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">
        </TextView>


        <ImageView
            android:id="@+id/imageMenu"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="176dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_baseline_arrow_back_24"
            app:layout_constraintBottom_toBottomOf="@id/text_hello_dash"
            app:layout_constraintEnd_toStartOf="@+id/nameUser"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/text_hello_dash"
            app:layout_constraintVertical_bias="0.625"
            app:tint="@color/white"></ImageView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/white_rec_back"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/imageMenu">

                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:background="@null"
                        android:hint="@string/search_elem"
                        android:imeOptions="actionSearch"
                        android:inputType="text"
                        android:paddingStart="15dp"
                        android:paddingEnd="15dp"
                        android:textColor="@color/colorFor"
                        android:textSize="16sp"
                        android:importantForAutofill="no">
                    </EditText>

                    <ImageView

                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/search_icon_back"
                        android:contentDescription="@string/app_name"
                        android:padding="6dp"
                        android:src="@drawable/ic_baseline_search"
                        app:tint="@color/colorFor">
                    </ImageView>
                </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/dashHeader"
        android:layout_marginTop="2dp"
        tools:listitem="@layout/list_item" />

    <ProgressBar
        android:visibility="invisible"
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"/>

</RelativeLayout>