<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Dashboard">




    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dashHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/header_dash"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/text_hello_dash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_marginTop="16dp"
            android:gravity="right"
            android:text="@string/hello_user"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintRight_toLeftOf="@+id/imageMenu"
            app:layout_constraintTop_toTopOf="parent">
        </TextView>

        <TextView
            android:id="@+id/nameUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="right"
            android:text="@string/user"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginRight="10dp"
            app:layout_constraintRight_toLeftOf="@id/text_hello_dash"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_goneMarginTop="15dp" />

        <ImageView
            android:id="@+id/imageMenu"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginRight="10dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_baseline_menu"
            app:layout_constraintBottom_toBottomOf="@id/text_hello_dash"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/text_hello_dash"
            app:layout_constraintVertical_bias="0.625"
            app:menu="@menu/menu"
            app:tint="@color/white"></ImageView>
        
<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginRigth="15dp"-->
<!--            android:layout_marginTop="15dp"-->
<!--            android:layout_marginLeft="15dp"-->
<!--            android:layout_marginBottom="15dp"-->
<!--            android:background="@drawable/white_rec_back"-->
<!--            android:orientation="horizontal"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@id/imageMenu">-->
<!--            -->
<!--            <EditText-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="40dp"-->
<!--                android:layout_weight="1"-->
<!--                android:background="@null"-->
<!--                android:hint="@string/search_elem"-->
<!--                android:imeOptions="actionSearch"-->
<!--                android:inputType="text"-->
<!--                android:paddingRigth="15dp"-->
<!--                android:paddingLeft="15dp"-->
<!--                android:textColor="@color/colorFor"-->
<!--                android:textSize="16sp"-->
<!--                android:importantForAutofill="no">-->
<!--            </EditText>-->

<!--            <ImageView-->

<!--                android:layout_width="40dp"-->
<!--                android:layout_height="40dp"-->
<!--                android:background="@drawable/search_icon_back"-->
<!--                android:contentDescription="@string/app_name"-->
<!--                android:padding="6dp"-->
<!--                android:src="@drawable/ic_baseline_search"-->
<!--                app:tint="@color/colorFor">-->
<!--            </ImageView>-->
<!--        </LinearLayout>-->

    </androidx.constraintlayout.widget.ConstraintLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:overScrollMode="never"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dashHeader">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


<!--            1-->
            <LinearLayout
                android:id="@+id/layout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:background="@drawable/red_rec_back"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="20dp"
                android:layout_margin="20dp"
                app:layout_constraintDimensionRatio="H1:1"
               app:layout_constraintRight_toRightOf="parent"
               app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent">

<!--                <Button-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:onClick="Urgrnt">-->
<!--                </Button>-->

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="حالة طارئة !"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:onClick="Urgent"
                    android:drawableLeft="@drawable/ic_baseline_support">
                </TextView>


            </LinearLayout>
<!--            2-->
            <LinearLayout
                android:id="@+id/layout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:background="@drawable/white_rec_back"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp"
                android:layout_margin="20dp"
                app:layout_constraintDimensionRatio="H1:1"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout1">

                <ImageView
                    android:layout_width="102dp"
                    android:layout_height="100dp"
                    android:layout_margin="8dp"
                    android:contentDescription="@string/app_name"
                    android:padding="8dp"
                    android:src="@drawable/ic_baseline_list_alt">
                </ImageView>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/listReport"
                    android:textColor="@color/colorFor"
                    android:textSize="25sp"
                    android:textStyle="bold">
                </TextView>


            </LinearLayout>
<!--            3-->
            <LinearLayout
                android:id="@+id/layout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:background="@drawable/white_rec_back"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp"
                android:layout_margin="20dp"
                app:layout_constraintDimensionRatio="H1:1"
               app:layout_constraintRight_toRightOf="parent"
               app:layout_constraintLeft_toLeftOf="parent"

                app:layout_constraintTop_toBottomOf="@id/layout2">

                <ImageView
                    android:layout_width="102dp"
                    android:layout_height="100dp"
                    android:layout_margin="8dp"
                    android:contentDescription="@string/app_name"
                    android:padding="8dp"
                    android:src="@drawable/ic_baseline_safty">
                </ImageView>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/saftyList"
                    android:textColor="@color/colorFor"
                    android:textSize="25sp"
                    android:textStyle="bold">
                </TextView>


            </LinearLayout>

            <!--            4-->
            <LinearLayout
                android:id="@+id/layout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/white_rec_back"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp"
                app:layout_constraintDimensionRatio="H1:1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout3">

                <ImageView
                    android:layout_width="102dp"
                    android:layout_height="100dp"
                    android:layout_margin="8dp"
                    android:contentDescription="@string/app_name"
                    android:padding="8dp"
                    android:src="@drawable/ic_baseline_create"></ImageView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/newReport"
                    android:textColor="@color/colorFor"
                    android:textSize="25sp"
                    android:textStyle="bold"></TextView>


            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>